# erasure-coding-crust

./: CMakeLists.txt  Cargo.toml  bindings.rs  cpp.md  notes.md  reed-solomon-c.hpp  reed_solomon_novelpoly-e7f9373e66f5f657.ll  reed_solomon_novelpoly-e7f9373e66f5f657.s  rust.md  wip.patch
benchmark/: benchmark.cpp
ec-cpp/: CMakeLists.txt  reed-solomon-c.cpp
include/ec-cpp/: reed-solomon.hpp
src/: erasure_coding_new.rs
