[package]
name = "erasure-coding-crust"
version = "0.2.0"
authors = ["Alexander Lednev <iceseer@gmail.com>"]
edition = "2018"
build = "build.rs"

[lib]
name = "erasure_coding_crust"
crate-type = ["cdylib", "staticlib"]

[dependencies]
novelpoly = { git = "https://github.com/paritytech/reed-solomon-novelpoly.git", package = "reed-solomon-novelpoly" }
# novelpoly = { path = "/home/alin/code/reed-solomon-novelpoly/reed-solomon-novelpoly", package = "reed-solomon-novelpoly" }

[dev-dependencies]
hex-literal = "0.3.1"
rand = "0.7"

[build-dependencies]
cbindgen = "0.14.0"

[profile.release]
lto = true
codegen-units = 1
